--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,81 @@
+.theme-dark {
+  --font-interface-theme: Lilex;
+  --font-text-theme: Lilex;
+  --font-monospace-theme: Lilex;
+  --background-primary: #121212;
+  --background-primary-alt: #1c1c1c;
+  --background-secondary: #1c1c1c;
+  --background-secondary-alt: #383838;
+  --background-modifier-border: #626262;
+  --background-modifier-form-field: #383838;
+  --background-modifier-form-field-highlighted: #626262;
+  --background-modifier-box-shadow: rgba(0, 0, 0, 0.3);
+  --background-modifier-success: #767676;
+  --background-modifier-error: #8a8a8a;
+  --background-modifier-error-rgb: 138, 138, 138;
+  --background-modifier-error-hover: #9e9e9e;
+  --background-modifier-cover: rgba(0, 0, 0, 0.8);
+  --text-accent: #9e9e9e;
+  --text-accent-hover: #b2b2b2;
+  --text-normal: #e0e0e0;
+  --text-muted: #8a8a8a;
+  --text-muted-rgb: 138, 138, 138;
+  --text-faint: #767676;
+  --text-highlight-bg: #626262;
+  --text-error: #9e9e9e;
+  --text-error-hover: #b2b2b2;
+  --text-success: #767676;
+  --text-warning: #9e9e9e;
+  --text-selection: rgba(98, 98, 98, 0.5);
+  --text-on-accent: #121212;
+  --interactive-normal: #383838;
+  --interactive-hover: #626262;
+  --interactive-accent: #767676;
+  --interactive-accent-rgb: 118, 118, 118;
+  --interactive-accent-hover: #9e9e9e;
+  --interactive-success: #767676;
+  --scrollbar-active-thumb-bg: rgba(224, 224, 224, 0.2);
+  --scrollbar-bg: rgba(224, 224, 224, 0.05);
+  --scrollbar-thumb-bg: rgba(224, 224, 224, 0.1);
+  --code-background: #1c1c1c;
+  --code-normal: #c6c6c6;
+  --code-comment: #8a8a8a;
+  --code-keyword: #9e9e9e;
+  --code-property: #767676;
+  --code-string: #b2b2b2;
+  --tag-background: #383838;
+  --tag-color: #e0e0e0;
+  --color-red: #8a8a8a;
+  --color-red-rgb: 138, 138, 138;
+  --color-orange: #b2b2b2;
+  --color-orange-rgb: 178, 178, 178;
+  --color-yellow: #9e9e9e;
+  --color-yellow-rgb: 158, 158, 158;
+  --color-green: #767676;
+  --color-green-rgb: 118, 118, 118;
+  --color-cyan: #626262;
+  --color-cyan-rgb: 98, 98, 98;
+  --color-blue: #626262;
+  --color-blue-rgb: 98, 98, 98;
+  --color-purple: #8a8a8a;
+  --color-purple-rgb: 138, 138, 138;
+  --color-pink: #9e9e9e;
+  --color-pink-rgb: 158, 158, 158;
+  --color-base-00: #121212;
+  --color-base-05: #1c1c1c;
+  --color-base-10: #383838;
+  --color-base-20: #626262;
+  --color-base-25: #767676;
+  --color-base-30: #8a8a8a;
+  --color-base-35: #9e9e9e;
+  --color-base-40: #b2b2b2;
+  --color-base-50: #c6c6c6;
+  --color-base-60: #e0e0e0;
+  --color-base-70: #ffffff;
+  --mono-rgb-0: 18, 18, 18;
+  --mono-rgb-100: 224, 224, 224;
+}
+
 body {
 	--radius-s: 0px;
 	--radius-m: 0px;
